* Wave dash mechanic V1.